hphp/test/zend/good/ext/gd/tests/bug75571.php.skipif
<?php
<<__EntryPoint>> function main() {
if (!function_exists('imagetypes')) die("skip gd extension not available\n");
}
