hphp/test/zend/bad/ext/pgsql/tests/24sync_query_prepared.php.skipif
<?php
include("skipif.inc");
if (!function_exists('pg_prepare')) die('skip function pg_prepare() does not exist');
?>